# Vaminfo

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  VaminfoConfig  VaminfoConfig.vmf  VaminfoInfo.vmf  Version.vmf  info.vmf  install.sh  main.rs  settings.vmf  vaminfo  vaminfobash-old
art/: debian.vtxt
src/: ascii.rs  config.rs  layout.rs  main.rs  mod.rs  renderer.rs  wizard.rs
src/modules/: battery.rs  bios.rs  bluetooth.rs  color_blocks.rs  cpu.rs  desktop.rs  disk.rs  gpu.rs  hostname.rs  kernel.rs  local_ip.rs  media.rs  network.rs  os_info.rs  ram.rs  resolution.rs  shell.rs  terminal.rs  theme.rs  uptime.rs
