[package]
name = "vaminfo"
version = "0.1.0"
edition = "2021"
description = "Vamora OS system information tool"
authors = ["Vamora OS"]
license = "MIT"

[[bin]]
name = "vaminfo"
path = "src/main.rs"

[dependencies]
sysinfo = "0.32"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
